--- a/MVCCapstone/Web.config
+++ b/MVCCapstone/Web.config
@@ -9,7 +9,8 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GameContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-MVCCapstone-20200309123841;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="GameContext" connectionString="Data Source=SQL5059.site4now.net;Initial Catalog=DB_A5A80C_GameContext;User Id=DB_A5A80C_GameContext_admin;Password=Linabean23!;"
+ providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -81,11 +82,11 @@
         <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
-    <contexts>
+    <!--<contexts>
       <context type="MVCCapstone.DAL.GameContext, MVCCapstone">
         <databaseInitializer type="MVCCapstone.DAL.GameInitializer, MVCCapstone" />
       </context>
-    </contexts>
+    </contexts>-->
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
